recursion.lessons.recursion.koch.Koch.scala.error
Koch:21: error: value to3 is not a member of Int
    	for(i<-1 to3) {
                 ^